# leclerc

./: CMakeLists.txt  PacketHeader.h  leclerc.cpp  leclerc.h  main.cpp
data/: car_motion_data.h  car_setup_data.h  car_status_data.h  car_telemetry_data.h  event_packet.h  fixed_types.h  lap_data.h  marshal_zone.h  packet_car_setup_data.h  packet_car_telemetry_data.h  packet_event_data.h  packet_header.h  packet_id.h  packet_participants_data.h  packet_session_data.h  participant_data.h
docs/: SEWERYN_GŁADYSZ_F1_DASHBOARD_SCHEMA_v3.sch  SewerynGładyszSMiW.xlsx  docs.xls  kalkulator.xlsx
esp8266/leclerc_esp8266/: leclerc_esp8266.ino
leclerc/: car_motion_data.h  car_setup_data.h  car_status_data.h  car_status_handler.cpp  car_status_handler.h  car_telemetry_data.h  car_telemetry_handler.cpp  car_telemetry_handler.h  controller.cpp  controller.h  data.h  event_packet.h  handle_result.h  handle_result_type.h  leclerc.cpp  leclerc.h  leclerc.ino  logic.h  marshal_zone.h  packet_car_status_data.h  packet_car_telemetry_data.h  packet_event_data.h  packet_handler.cpp  packet_handler.h  packet_handler_factory.cpp  packet_handler_factory.h  packet_header.h  packet_id.h  packet_lap_data.h  packet_motion_data.h  packet_participants_data.h  participant_data.h  serial.cpp  serial.h  utils.h
